--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -107,3 +107,7 @@ set -g message-fg colour232
 set -g message-bg colour166
 
 # }
+
+# Tmux resurrect {
+run-shell ~/dotfiles/tmux-resurrect/resurrect.tmux
+# }
